--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.9.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "react-router": "^2.0.0-rc5"
+    "react-router": "^2.0.0-rc5",
+    "x-ray": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
