--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "good": "^6.6.0",
     "good-console": "^5.3.1",
     "hapi": "^13.3.0",
+    "joi": "^8.0.5",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-router": "^2.0.0-rc5",
